--- a/index.css
+++ b/index.css
@@ -1,3 +1,4 @@
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   max-width: 1024px;
@@ -19,7 +20,7 @@ header {
 header {
   grid-area: header-cell;
   height: 100px;
-  background-image: url(images/header.png);
+  background-image: url(images2/header.png);
 }
 #header-img1 {
   height: 100px;
@@ -216,7 +217,6 @@ h3 {
   line-height: 24px;
   font-size: 20px;
 }
-/* ------- */
 .image-left img,
 .image-left video {
   float: left;
@@ -307,24 +307,4 @@ section.products span {
 
 form {
   margin: auto;
-}
-.khoitong1 {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-}
-.a1 {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
-}
-.a2{
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  grid-template-areas: 
-  "aa bb"
-}
-.a2a{
-  grid-area: bb;
-}
-.a2b{
-  grid-area: aa;
 }
